horgand ChangeLog






== v1.11 (  /09/2007) ==
--------------------------------------------------------------------------------------------
- Drawbars in stereo mode for better sound.
- Presets adjusted.
- Format files has changed.
- Synthesizer parameters can be edited and stored for each preset.
- More tremolo power.





== v1.10 (20/08/2007) ==
--------------------------------------------------------------------------------------------
- Normalize Volumes.
- Solve bug on Compare.
- Adjust presets.
- Small visual changes.
- Each drawbar can be managed as percussion.
- Visual and program settings saved and restored.
- Optimized some $prefix things.
- New Tremolo.
- Rottary and Chorus now can coexist.
- New Chorus and new buffer for variable delay Effects
- Small code optimization.
- More code changes to prevent crashes with RT-Kernels.
- Better Jack support reducing CPU usage.




== v1.09 (05/08/2007) ==
--------------------------------------------------------------------------------------------
- Code optimized.
- Presets modified.
- Improved some compile options.
- Upgraded to Make Tools 1.7
- Maintain split status on program change.
- Bass type is selected when program starts ( Krzysztof Foltman).
- Fixed FLTK search on Make Tools scripts (Krzysztof Foltman).
- Fixed crash on RT-Kernels.
- Less memory ( 8 Mb) usage.
- DSP Effects Improved.
- New ADSR.
- Attack removed.
- Marimba removed.
- Sound engine improved. 
- Krzysztof Foltman <krzysztof@foltman.com> involved into the project.   
- Small DSP Changes.
- Small changes in envelope.
- Fixed Rotary Clicks.
- Changed Reverb Presets





== v1.07 (23/06/2004) ==
---------------------------------------------------------------------------------------------
- Sound Engine Changed (10 Carriers), +/- same sound than 20 carriers and half CPU
  usage
- Recognizes MIDI Control Reverb depth message.
- Recognizes MIDI Control Chorus depth message.
- Fixed bug cleaning reverb.
- Default Bank modified.
- Improved speed.