@@ -8,7 +8,7 @@
 5,0.001136,0.990000,1
 4,0.003704,0.990000,1
 7,-0.001667,0.000000,0
-0.630000,0,19.420000,1.600000,5.300000,0,75.000000,0.990000
+0.630000,0,0.000000,0.000000,5.300000,0,0.000000,0.990000
 0.001000,1,100.000000,0,14112.000000,0.510000
 0,1,92.000000,6,2.000000,20.000000,0.670000
 0.280000,0.970000,0.000080,0.051000,12800.000000
@@ -416,42 +416,42 @@ Foronda 1
 0.066000
 JS 3
 ---
-5,0.002536,0.980000,0
-3,0.001073,0.990000,0
-7,0.001033,0.990000,0
-7,0.000775,0.990000,0
-3,0.000429,0.990000,0
-5,0.000423,0.990000,0
-11,0.000797,0.000000,0
-14,0.001744,0.000000,0
-19,-0.001033,0.000000,0
-22,-0.000465,0.000000,0
-0.700000,0,7.500000,0.000000,30.400000,1,5.560000,0.990000
-0.001700,1,27.900000,0,22932.000000,0.380000
-1,1,91.000000,6,1.530000,22.000000,0.290000
-0.200000,0.800000,0.000100,0.240000,12800.000000
+6,0.009650,0.990000,0
+10,0.008042,0.990000,0
+13,0.010722,0.990000,0
+16,inf,0.990000,0
+5,0.001755,0.000000,0
+10,0.002681,0.000000,0
+11,0.002757,0.000000,0
+14,0.006031,0.000000,0
+10,0.001787,0.990000,1
+16,inf,0.990000,1
+0.700000,-16,15.500000,0.000000,13.700000,0,91.000000,0.992188
+0.001000,1,96.500000,0,0.000000,0.000000
+0,1,87.000000,6,1.200000,27.000000,0.990000
+0.300000,0.990000,0.000070,0.061000,9900.000000
 1.000000
 1.000000
 1.000000
-0.066670
+0.660000
 0.500000
-0.400000
+1.000000
 0.300000
 0.250000
 0.220000
-0.200000
+1.000000
 0.166000
 0.142000
-0.133000
+0.820000
 0.125000
 0.111000
-0.100000
+0.890000
 0.095000
 0.090000
 0.083000
 0.076000
 0.071000
-0.066000
+0.190000
 Hol 3
 ---
 9,0.014286,0.990000,0
@@ -463,11 +463,11 @@ Hol 3
 15,0.014286,0.000000,0
 8,0.001563,0.990000,1
 5,0.001010,0.990000,1
-3,-0.003333,0.000000,0
-0.700000,-19,21.510000,0.000000,20.799999,0,0.000000,0.990236
+13,-0.003333,0.990000,1
+0.700000,-19,12.910000,0.000000,20.799999,0,66.000000,0.990236
 0.001000,1,100.000000,0,10584.000000,0.260000
-0,1,31.000000,7,0.640000,48.000000,0.790000
-0.460000,0.000000,0.000050,0.008000,9800.000000
+0,1,31.000000,5,0.640000,48.000000,0.790000
+0.600000,0.000000,0.000080,0.012000,9800.000000
 1.000000
 1.000000
 1.000000
@@ -796,13 +796,13 @@ Hol 5
 0.066000
 Benet 6
 ---
-3,0.005023,0.480000,0
-5,0.002968,0.300000,0
-8,0.002721,0.460000,0
-14,0.008163,0.300000,0
-4,0.001088,0.430000,0
-7,0.001209,0.590000,0
-11,0.001866,0.000000,0
+3,0.005023,0.990000,0
+5,0.002968,0.850000,0
+8,0.002721,0.660000,0
+14,0.008163,0.470000,0
+4,0.001088,0.620000,0
+7,0.001209,0.760000,0
+11,0.001866,0.900000,0
 14,0.004081,0.000000,0
 19,-0.002419,0.000000,0
 22,-0.001088,0.000000,0
@@ -1024,31 +1024,31 @@ Church 3
 0.066000
 JS 7
 ---
-2,0.255290,0.990000,0
-5,0.002177,0.990000,0
-3,0.001258,0.990000,0
-11,-0.002920,0.000000,0
-8,0.001415,0.550000,0
-4,0.000786,0.560000,0
-11,0.001348,0.000000,0
-3,inf,0.990000,1
-4,-0.002096,0.990000,1
-7,-0.000943,0.990000,1
-0.750000,0,18.930000,3.500000,4.600000,0,49.000000,0.990000
-0.001000,1,56.599998,0,17640.000000,0.370000
-0,1,10.000000,6,1.830000,18.000000,0.700000
-0.200000,0.890000,0.000050,0.077000,12800.000000
+2,0.250080,0.990000,0
+1,0.004000,0.990000,0
+4,0.000000,0.990000,0
+3,0.003000,0.990000,0
+16,0.006000,0.580000,0
+5,0.000000,0.210000,0
+11,0.000000,0.120000,0
+3,0.000000,0.990000,1
+7,0.000000,0.990000,1
+11,0.000000,0.000000,0
+0.700000,0,12.910000,3.300000,11.300000,0,69.000000,0.990000
+0.004000,1,0.000000,0,0.000000,0.000000
+0,1,90.000000,6,1.850000,26.000000,0.930000
+0.200000,0.800000,0.000050,0.019000,9600.000000
 1.000000
 1.000000
 1.000000
-0.710000
-0.650000
+0.750000
+1.000000
 0.400000
-0.280000
-0.720000
+1.000000
+0.250000
 0.220000
 0.200000
-0.166000
+0.120000
 0.142000
 0.133000
 0.125000
