@@ -33,7 +33,7 @@ HOR::Chorus_LFO (float *Chorus_X)
 
   float out;
 
-   *Chorus_X += Chorus_LFO_Speed * increment * 3.0;
+  *Chorus_X += Chorus_LFO_Speed * increment * 3.0;
 
   if (*Chorus_X > 1) *Chorus_X = 0;
 
@@ -51,7 +51,7 @@ void
 HOR::Calc_Chorus_LFO_Frequency()
 
 {
-Chorus_LFO_Frequency = modulation * Chorus_LFO_Amplitude;
+Chorus_LFO_Frequency = .5*modulation*Chorus_LFO_Amplitude;
 
 };
 
@@ -64,23 +64,27 @@ HOR::Effect_Chorus()
   int elkel,elkel2;
   float ch_delay= Chorus_Delay * SAMPLE_RATE / 10000.0;
   float ldelay1,rdelay1,dell,valorl;
-  int i,j;
+  int i;
   float chor_vol=Chorus_Volume*.5;
-  float ms=(SAMPLE_RATE/1000.0)*20.0;
+  float ms=SAMPLE_RATE/1000.0*20.0;
+  float maxdelay=SAMPLE_RATE/1000.0*30.0;
+  float mi;
   float dllo;
-  int uPERIOD=PERIOD/2;
     
     
   for (i = 0; i < PERIOD; i +=2)
 
     {
-      j =i/2;
+      
       ldelay1=ldelay;
       rdelay1=rdelay;
-           
+
+      mi=maxdelay/PERIOD*i;
+
       // L Channel
+
       ldelay=ms+ch_delay+Chorus_LFO(&Chorus_X_L);
-      dell=(ldelay1*(uPERIOD-j)+ldelay*j)/uPERIOD;
+      dell=(ldelay1*(maxdelay-mi)+ldelay*mi)/maxdelay;
       elkel=cl_counter-(int)dell;
       if (elkel<0) elkel +=8192;
       if (elkel>=8192) elkel -=8192;
@@ -89,12 +93,14 @@ HOR::Effect_Chorus()
       if (elkel2>=8192) elkel2 -=8192;
       dllo=1.0-fmod(dell,1.0);
       valorl=(dllo*cldelay[elkel])+(cldelay[elkel2]*(1-dllo));
-      buf[i] +=valorl*chor_vol;
+      buf[i]+=valorl*chor_vol;
       cldelay[cl_counter]=buf[i];
+      
+          
       
       // R Channel
       rdelay=ms+ch_delay+Chorus_LFO(&Chorus_X_R);
-      dell=(rdelay1*(uPERIOD-j)+rdelay*j)/uPERIOD;
+      dell=(rdelay1*(maxdelay-mi)+rdelay*mi)/maxdelay;
       elkel=cl_counter-(int)dell;
       if (elkel<0) elkel +=8192;
       if (elkel>=8192) elkel -=8192;
@@ -102,8 +108,8 @@ HOR::Effect_Chorus()
       if (elkel2<0) elkel2 +=8192;
       if (elkel2>=8192) elkel2 -=8192;
       dllo=1.0-fmod(dell,1.0);
-      valorl = (dllo*crdelay[elkel])+(crdelay[elkel2]*(1-dllo));
-      buf[i+1] +=valorl*chor_vol;
+      valorl=(dllo*crdelay[elkel])+(crdelay[elkel2]*(1-dllo));
+      buf[i+1]+=valorl*chor_vol;
       crdelay[cl_counter]=buf[i+1];      
       
       if (++cl_counter>=8192) cl_counter=0;
