@@ -248,7 +248,7 @@ HOR::New ()
   Rotary_LFO_Speed = 0;
   LFOpitch = 0;
   modulation = .99;
-  transpose = 0;
+  organ_transpose = 0;
   E_Rotary_On = 0;
   pitch = 0;
   pedal = 0;
@@ -337,7 +337,7 @@ Rotary_LFO_Speed = Undo[UndoCount].Rotary_LFO_Speed;
 LFOpitch = Undo[UndoCount].LFOpitch;
 E_Rotary_On = Undo[UndoCount].E_Rotary_On;
 modulation = Undo[UndoCount].modulation;
-transpose = Undo[UndoCount].transpose;
+organ_transpose = Undo[UndoCount].organ_transpose;
 Organ_Master_Volume = Undo[UndoCount].Organ_Master_Volume;
 
 for (k=0; k<=24; k++) Name[k]=Undo[UndoCount].Name[k];
@@ -406,7 +406,7 @@ Undo[UndoCount].Rotary_LFO_Speed=Rotary_LFO_Speed;
 Undo[UndoCount].LFOpitch=LFOpitch;
 Undo[UndoCount].E_Rotary_On=E_Rotary_On;
 Undo[UndoCount].modulation=modulation;
-Undo[UndoCount].transpose=transpose;
+Undo[UndoCount].organ_transpose=organ_transpose;
 Undo[UndoCount].Organ_Master_Volume=Organ_Master_Volume;
 
 for (k=0; k<=24; k++) Undo[UndoCount].Name[k]=Name[k];
@@ -458,7 +458,7 @@ Prim[1].Rotary_LFO_Speed=Rotary_LFO_Speed;
 Prim[1].LFOpitch=LFOpitch;
 Prim[1].E_Rotary_On=E_Rotary_On;
 Prim[1].modulation=modulation;
-Prim[1].transpose=transpose;
+Prim[1].organ_transpose=organ_transpose;
 Prim[1].Organ_Master_Volume=Organ_Master_Volume;
 
 for (k=0; k<=24; k++) Prim[1].Name[k]=Name[k];
@@ -512,7 +512,7 @@ Rotary_LFO_Speed = Prim[1].Rotary_LFO_Speed;
 LFOpitch = Prim[1].LFOpitch;
 E_Rotary_On = Prim[1].E_Rotary_On;
 modulation = Prim[1].modulation;
-transpose = Prim[1].transpose;
+organ_transpose = Prim[1].organ_transpose;
 Organ_Master_Volume = Prim[1].Organ_Master_Volume;
 bzero(Name,sizeof(Name));
 for (k=0; k<=24; k++) Name[k]=Prim[1].Name[k];
@@ -558,7 +558,7 @@ Banco[i].Rotary_LFO_Speed=Rotary_LFO_Speed;
 Banco[i].LFOpitch=LFOpitch;
 Banco[i].E_Rotary_On=E_Rotary_On;
 Banco[i].modulation=modulation;
-Banco[i].transpose=transpose;
+Banco[i].organ_transpose=organ_transpose;
 Banco[i].Organ_Master_Volume=Organ_Master_Volume;
 
 for (k=0; k<=24; k++) Banco[i].Name[k]=Name[k];
@@ -606,7 +606,7 @@ Rotary_LFO_Speed = Banco[i].Rotary_LFO_Speed;
 LFOpitch = Banco[i].LFOpitch;
 E_Rotary_On = Banco[i].E_Rotary_On;
 modulation = Banco[i].modulation;
-transpose = Banco[i].transpose;
+organ_transpose = Banco[i].organ_transpose;
 Organ_Master_Volume = Banco[i].Organ_Master_Volume;
 bzero(Name, sizeof(Name));
 for (k=0; k<=24; k++) Name[k]=Banco[i].Name[k];
