@@ -7,6 +7,8 @@ horgand ChangeLog
 
 == v1.11 (  /09/2007) ==
 --------------------------------------------------------------------------------------------
+- Added organ transpose.
+- Less clicks in Chorus
 - Drawbars in stereo mode for better sound.
 - Presets adjusted.
 - Format files has changed.
